tests/cases/conformance/decorators/invalid/decoratorOnFunctionDeclaration.ts
declare function dec<T>(target: T): T;

@dec
function F() {
}